Add sw-description generation.
- Code structure change.
- Add sw-description generation function.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx8mm.cfg
+++ b/boards/cfg_imx8mm.cfg
@@ -64,5 +64,5 @@ imx-boot-imx8mmevk-sd.bin-flash_evk
 emmc_bootpart.sh
 "
 
-SW_DESCRIPTION_TEMPLATE="./sw-description-imx8mm.template"
+SW_DESCRIPTION_TEMPLATE="../boards/sw-description-imx8mm-emmc-dualcopy.template"
 
