Fix bugs in image generation for 6ull.
- Fix bugs in image generation for 6ull.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx6ull.cfg
+++ b/boards/cfg_imx6ull.cfg
@@ -17,7 +17,7 @@ SLOTB_ROOTFS:3340:6340:ext4
 
 IMAGES_HEADER="
 ${IMAGE_MBR_PATH}:0:1K
-slota/u-boot-imx6ull9x9evk.imx:1K:8M
+${WRK_DIR}/slota/u-boot-imx6ull9x9evk.imx:1K:8M
 "
 
 IMAGES_SWUPDATE="
