Add tee.bin to boot part image list.
- Add tee.bin to boot part image list.
- Use 14x14 6ull board.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx6ull.cfg
+++ b/boards/cfg_imx6ull.cfg
@@ -17,22 +17,23 @@ SLOTB_ROOTFS:3340:6340:ext4
 
 IMAGES_HEADER="
 ${IMAGE_MBR_PATH}:0:1K
-${WRK_DIR}/slota/u-boot-imx6ull9x9evk.imx:1K:8M
+${WRK_DIR}/slota/u-boot-imx6ull14x14evk.imx:1K:8M
 "
 
 IMAGES_SWUPDATE="
 ${WRK_DIR}/slota/zImage:8M:38M
-${WRK_DIR}/slota/imx6ull-9x9-evk.dtb:38M:42M
-${WRK_DIR}/slota/swupdate-image-imx6ull9x9evk.cpio.gz.u-boot:42M:100M
+${WRK_DIR}/slota/imx6ull-14x14-evk.dtb:38M:42M
+${WRK_DIR}/slota/swupdate-image-imx6ull14x14evk.cpio.gz.u-boot:42M:100M
 "
 
 # SlotA boot partion files list, which will be copied into slotb boot partition.
 SLOTA_BOOT_PT_FILES="
-${WRK_DIR}/slota/imx6ull-9x9-evk.dtb
+${WRK_DIR}/slota/imx6ull-14x14-evk.dtb
 ${WRK_DIR}/slota/zImage
+${WRK_DIR}/slota/tee.bin
 "
 SLOTA_BOOT_PT="${WRK_DIR}/common/slota_boot_pt_120M.mirror:100M:220M"
-SLOTA_ROOTFS="${WRK_DIR}/slota/imx-image-multimedia-imx6ull9x9evk.ext4:220M:3220M"
+SLOTA_ROOTFS="${WRK_DIR}/slota/imx-image-multimedia-imx6ull14x14evk.ext4:220M:3220M"
 SLOTA_IMAGES="
 ${SLOTA_BOOT_PT}
 ${SLOTA_ROOTFS}
@@ -40,11 +41,11 @@ ${SLOTA_ROOTFS}
 
 # SlotB boot partion files list, which will be copied into slotb boot partition.
 SLOTB_BOOT_PT_FILES="
-${WRK_DIR}/slotb/imx6ull-9x9-evk.dtb
+${WRK_DIR}/slotb/imx6ull-14x14-evk.dtb
 ${WRK_DIR}/slotb/zImage
 "
 SLOTB_BOOT_PT="${WRK_DIR}/common/slotb_boot_pt_120M.mirror:3220M:3340M"
-SLOTB_ROOTFS="${WRK_DIR}/slotb/imx-image-multimedia-imx6ull9x9evk.ext4:3340M:6340M"
+SLOTB_ROOTFS="${WRK_DIR}/slotb/imx-image-multimedia-imx6ull14x14evk.ext4:3340M:6340M"
 SLOTB_IMAGES="
 ${SLOTB_BOOT_PT}
 ${SLOTB_ROOTFS}
@@ -59,16 +60,17 @@ UPDATE_SLOT="b"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
-UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx6ull9x9evk.ext4:0:3000M"
+UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx6ull14x14evk.ext4:0:3000M"
 UPDATE_BOOT_PT_FILES="
-${WRK_DIR}/imx6ull-9x9-evk.dtb
+${WRK_DIR}/imx6ull-14x14-evk.dtb
 ${WRK_DIR}/zImage
+${WRK_DIR}/tee.bin
 "
 
 UPDATE_IMAGES="
 slotb_boot_pt_120M.mirror
-imx-image-multimedia-imx6ull9x9evk.ext4
-u-boot-imx6ull9x9evk.imx
+imx-image-multimedia-imx6ull14x14evk.ext4
+u-boot-imx6ull14x14evk.imx
 emmc_bootpart.sh
 "
 
