Use slot_update to get image files.
- Use slot_update to get image files.
- Replace 9x9 by 14x14.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx6ull.cfg
+++ b/boards/cfg_imx6ull.cfg
@@ -30,7 +30,6 @@ ${WRK_DIR}/slota/swupdate-image-imx6ull14x14evk.cpio.gz.u-boot:42M:100M
 SLOTA_BOOT_PT_FILES="
 ${WRK_DIR}/slota/imx6ull-14x14-evk.dtb
 ${WRK_DIR}/slota/zImage
-${WRK_DIR}/slota/tee.bin
 "
 SLOTA_BOOT_PT="${WRK_DIR}/common/slota_boot_pt_120M.mirror:100M:220M"
 SLOTA_ROOTFS="${WRK_DIR}/slota/imx-image-multimedia-imx6ull14x14evk.ext4:220M:3220M"
@@ -62,9 +61,8 @@ SSL_MODE=RSA-PKCS-1.5
 UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
 UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx6ull14x14evk.ext4:0:3000M"
 UPDATE_BOOT_PT_FILES="
-${WRK_DIR}/imx6ull-14x14-evk.dtb
-${WRK_DIR}/zImage
-${WRK_DIR}/tee.bin
+${WRK_DIR}/slot_update/imx6ull-14x14-evk.dtb
+${WRK_DIR}/slot_update/zImage
 "
 
 UPDATE_IMAGES="
@@ -74,5 +72,5 @@ u-boot-imx6ull14x14evk.imx
 emmc_bootpart.sh
 "
 
-SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-dualcopy.template"
+SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy.template"
 
