Rename full to image and simple to file.
- "update image" means it will update full partitions.
- "update file" means it will update files inside a partition.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx8mm_update_image.cfg
+++ b/boards/cfg_imx8mm_update_image.cfg
@@ -1,6 +1,6 @@
 #!/usr/bin/bash
 
-SOC_NAME=imx6ull
+SOC_NAME=imx8mm
 
 #############################################
 # Used to generate update image.
@@ -11,18 +11,18 @@ UPDATE_SLOT="b"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
-UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx6ull14x14evk.ext4:0:3000M"
+UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx8mmevk.ext4:0:3000M"
 UPDATE_BOOT_PT_FILES="
-${WRK_DIR}/slot_update/imx6ull-14x14-evk.dtb
-${WRK_DIR}/slot_update/zImage
+${WRK_DIR}/imx8mm-evk.dtb
+${WRK_DIR}/Image
 "
 
 UPDATE_IMAGES="
 slotb_boot_pt_120M.mirror
-imx-image-multimedia-imx6ull14x14evk.ext4
-u-boot-imx6ull14x14evk.imx
+imx-image-multimedia-imx8mmevk.ext4
+imx-boot-imx8mmevk-sd.bin-flash_evk
 emmc_bootpart.sh
 "
 
-SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy-full-gz.template"
+SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx8mm-emmc-dualcopy-image-gz.template"
 
