Script will help to append gz to sw-description file.
- Script will help to append gz to sw-description file.
- Change cfg file for this change.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/sw-description-imx8mm-emmc-dualcopy-image.template
+++ b/boards/sw-description-imx8mm-emmc-dualcopy-image.template
@@ -6,20 +6,20 @@ software =
 	imx8mmevk: {
 		images: (
 			{
-				filename = "slotb_boot_pt_120M.mirror.gz";
-				sha256 = "<slotb_boot_pt_120M.mirror.gz_sha256>";
+				filename = "slotb_boot_pt_120M.mirror";
+				sha256 = "<slotb_boot_pt_120M.mirror_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk2p3";
 			},
 			{
-				filename = "imx-image-multimedia-imx8mmevk.ext4.gz";
-				sha256 = "<imx-image-multimedia-imx8mmevk.ext4.gz_sha256>";
+				filename = "imx-image-multimedia-imx8mmevk.ext4";
+				sha256 = "<imx-image-multimedia-imx8mmevk.ext4_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk2p4";
 			},
 			{
-				filename = "imx-boot-imx8mmevk-sd.bin-flash_evk.gz";
-				sha256 = "<imx-boot-imx8mmevk-sd.bin-flash_evk.gz_sha256>";
+				filename = "imx-boot-imx8mmevk-sd.bin-flash_evk";
+				sha256 = "<imx-boot-imx8mmevk-sd.bin-flash_evk_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk2boot0";
 				offset = "33K";
@@ -27,8 +27,8 @@ software =
 		);
 		scripts: (
 			{
-				filename = "emmc_bootpart.sh.gz";
-				sha256 = "<emmc_bootpart.sh.gz_sha256>";
+				filename = "emmc_bootpart.sh";
+				sha256 = "<emmc_bootpart.sh_sha256>";
 				compressed = "zlib";
 				type = "postinstall";
 			}
