--- a/boards/sw-description-imx8mm-sd-dualcopy-image.template
+++ b/boards/sw-description-imx8mm-sd-dualcopy-image.template
@@ -3,32 +3,32 @@ software =
 	version = "1.0";
 	description = "Firmware update for test Project";
 	hardware-compatibility: [ "1.0", "1.2", "1.3"];
-	imx6ull14x14evk: {
+	imx8mmevk: {
 		images: (
 			{
-				filename = "slotb_boot_pt_120M.mirror.gz";
-				sha256 = "<slotb_boot_pt_120M.mirror.gz_sha256>";
+				filename = "slotb_boot_pt_120M.mirror";
+				sha256 = "<slotb_boot_pt_120M.mirror_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk1p3";
 			},
 			{
-				filename = "imx-image-multimedia-imx6ull14x14evk.ext4.gz";
-				sha256 = "<imx-image-multimedia-imx6ull14x14evk.ext4.gz_sha256>";
+				filename = "imx-image-multimedia-imx8mmevk.ext4";
+				sha256 = "<imx-image-multimedia-imx8mmevk.ext4_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk1p4";
 			},
 			{
-				filename = "u-boot-imx6ull14x14evk.imx.gz";
-				sha256 = "<u-boot-imx6ull14x14evk.imx.gz_sha256>";
+				filename = "imx-boot-imx8mmevk-sd.bin-flash_evk";
+				sha256 = "<imx-boot-imx8mmevk-sd.bin-flash_evk_sha256>";
 				compressed = "zlib";
 				device = "/dev/mmcblk1";
-				offset = "1K";
+				offset = "33K";
 			}
 		);
 		scripts: (
 			{
-				filename = "emmc_bootpart.sh.gz";
-				sha256 = "<emmc_bootpart.sh.gz_sha256>";
+				filename = "emmc_bootpart.sh";
+				sha256 = "<emmc_bootpart.sh_sha256>";
 				compressed = "zlib";
 				type = "postinstall";
 			}
