--- a/boards/cfg_imx6ull_update_file.cfg
+++ b/boards/cfg_imx6ull_update_file.cfg
@@ -1,19 +1,27 @@
 #!/usr/bin/bash
 
+# Name of the SoC.
+# This name will be used to source this board specific cfg file.
 SOC_NAME=imx6ull
 
 #############################################
 # Used to generate update image.
 #############################################
+# Updated BSP version. This string will be added to default output file.
 UPDATE_BSP_VER="LF_v5.10.9_1.0.0"
+# Updated container version. This string will be added to default output file.
 UPDATE_CONTAINER_VER="1.0"
+# Updated slot info. This string will be added to default output file.
 UPDATE_SLOT="b"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 
+# Updated files names.
+# Those images will be copied from slot_update to work directory and generate the update image.
 UPDATE_IMAGES="
 zImage
 imx6ull-14x14-evk.dtb
 "
 
+# Template file that will be used to generate a sw-description file.
 SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy-file.template"
