--- a/boards/cfg_imx6ull_update_image.cfg
+++ b/boards/cfg_imx6ull_update_image.cfg
@@ -1,22 +1,32 @@
 #!/usr/bin/bash
 
+# Name of the SoC.
+# This name will be used to source this board specific cfg file.
 SOC_NAME=imx6ull
 
 #############################################
 # Used to generate update image.
 #############################################
+# Updated BSP version. This string will be added to default output file.
 UPDATE_BSP_VER="LF_v5.10.9_1.0.0"
+# Updated container version. This string will be added to default output file.
 UPDATE_CONTAINER_VER="1.0"
+# Updated slot info. This string will be added to default output file.
 UPDATE_SLOT="b"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
+
+# Updated image information.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
 UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx6ull14x14evk.ext4:0:3000M"
+# Boot partition files. Thiese files will be copied to boot partition.
 UPDATE_BOOT_PT_FILES="
 ${WRK_DIR}/slot_update/imx6ull-14x14-evk.dtb
 ${WRK_DIR}/slot_update/zImage
 "
 
+# Those images will be copied from slot_update to work directory and generate the update image.
 UPDATE_IMAGES="
 slotb_boot_pt_120M.mirror
 imx-image-multimedia-imx6ull14x14evk.ext4
@@ -24,5 +34,6 @@ u-boot-imx6ull14x14evk.imx
 emmc_bootpart.sh
 "
 
+# Template file that will be used to generate a sw-description file.
 SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy-image.template"
 
