Enable installed-directly feature.
- Enable installed-directly feature.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/sw-description-imx6ull-sd-dualcopy-image.template
+++ b/boards/sw-description-imx6ull-sd-dualcopy-image.template
@@ -9,17 +9,20 @@ software =
 				filename = "slotb_boot_pt_120M.mirror";
 				sha256 = "<slotb_boot_pt_120M.mirror_sha256>";
 				device = "/dev/mmcblk1p3";
+				installed-directly = true;
 			},
 			{
 				filename = "imx-image-multimedia-imx6ull14x14evk.ext4";
 				sha256 = "<imx-image-multimedia-imx6ull14x14evk.ext4_sha256>";
 				device = "/dev/mmcblk1p4";
+				installed-directly = true;
 			},
 			{
 				filename = "u-boot-imx6ull14x14evk.imx";
 				sha256 = "<u-boot-imx6ull14x14evk.imx_sha256>";
 				device = "/dev/mmcblk1";
 				offset = "1K";
+				installed-directly = true;
 			}
 		);
 		scripts: (
@@ -27,6 +30,7 @@ software =
 				filename = "emmc_bootpart.sh";
 				sha256 = "<emmc_bootpart.sh_sha256>";
 				type = "postinstall";
+				installed-directly = true;
 			}
 		);
 		bootenv: (
