--- a/boards/sw-description-imx6ull-sd-singlecopy-file.template
+++ b/boards/sw-description-imx6ull-sd-singlecopy-file.template
@@ -11,6 +11,7 @@ software =
 				sha256 = "<zImage_sha256>";
 				device = "/dev/mmcblk1p1";
 				filesystem = "vfat";
+				installed-directly = true;
 			},
 			{
 				filename = "imx6ull-14x14-evk.dtb";
@@ -18,6 +19,7 @@ software =
 				sha256 = "<imx6ull-14x14-evk.dtb_sha256>";
 				device = "/dev/mmcblk1p1";
 				filesystem = "vfat";
+				installed-directly = true;
 			}
 		);
 		bootenv: (
