--- a/boards/cfg_imx6ull_base.cfg
+++ b/boards/cfg_imx6ull_base.cfg
@@ -7,28 +7,31 @@ SOC_NAME=imx6ull
 #############################################
 # Used to generate base image.
 #############################################
+# Partition table format, MBR or GPT.
+IMAGE_PT_TBL_FMT="MBR"
+
 # Path of MBR file. If -m is specified in command option, this file will be regenerated.
-IMAGE_MBR_PATH="${WRK_DIR}/common/swu_dualslot_7.5G.pt"
+IMAGE_PT_TBL_PATH="${WRK_DIR}/common/swu_dualslot_7.5G.pt"
 # Information of MBR file. Format is [FILENAME:<OFFSET_START>:<OFFSET_END>]
-IMAGE_MBR="${IMAGE_MBR_PATH}:0:7500M"
+IMAGE_PT_TBL="${IMAGE_PT_TBL_PATH}:0:7500M"
 # MBR header length. For MBR, this is always 512.
-IMAGE_MBR_LENGTH=512
+IMAGE_PT_TBL_LENGTH=512
 # MBR partition information. When the MBR need to be regenerated, this struct will be used to generate a new MBR.
 # Format: [PARTITION_NAME:<OFFSET_START>:<OFFSET_END>:<Filesystem Type>]
 # Numbers and fs type in this struct will be passed to command directly.
 # sudo parted <PARTITION_NAME> unit MiB mkpart primary <Filesystem Type> <OFFSET_START> <OFFSET_END>
-IMAGE_MBR_PT_STRUCT="
-SLOTA_BOOT_PT:100:220:fat32
-SLOTA_ROOTFS:220:3220:ext4
-SLOTB_BOOT_PT:3220:3340:fat32
-SLOTB_ROOTFS:3340:6340:ext4
+IMAGE_PT_TABLE_STRUCT="
+1:SLOTA_BOOT_PT:100:220:fat32
+2:SLOTA_ROOTFS:220:3220:ext4
+3:SLOTB_BOOT_PT:3220:3340:fat32
+4:SLOTB_ROOTFS:3340:6340:ext4
 "
 
 # Header of a image.
 # Contains MBR, bootloader and padding.
 # Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 IMAGES_HEADER="
-${IMAGE_MBR_PATH}:0:1K
+${IMAGE_PT_TBL_PATH}:0:1K
 ${WRK_DIR}/slota/u-boot-imx6ull14x14evk.imx:1K:8M
 "
 
