--- a/boards/cfg_imx8mm_base.cfg
+++ b/boards/cfg_imx8mm_base.cfg
@@ -1,25 +1,43 @@
 #!/usr/bin/bash
 
+# Name of the SoC.
+# This name will be used to source this board specific cfg file.
 SOC_NAME=imx8mm
 
 #############################################
 # Used to generate base image.
 #############################################
-IMAGE_MBR_PATH="${WRK_DIR}/common/swu_dualslot_7.5G.pt"
-IMAGE_MBR="${IMAGE_MBR_PATH}:0:7500M"
-IMAGE_MBR_LENGTH=512
-IMAGE_MBR_PT_STRUCT="
-SLOTA_BOOT_PT:100:220:fat32
-SLOTA_ROOTFS:220:3220:ext4
-SLOTB_BOOT_PT:3220:3340:fat32
-SLOTB_ROOTFS:3340:6340:ext4
+# Partition table format, MBR or GPT.
+IMAGE_PT_TBL_FMT="MBR"
+
+# Path of MBR file. If -m is specified in command option, this file will be regenerated.
+IMAGE_PT_TBL_PATH="${WRK_DIR}/common/swu_dualslot_7.5G.pt"
+# Information of MBR file. Format is [FILENAME:<OFFSET_START>:<OFFSET_END>]
+IMAGE_PT_TBL="${IMAGE_PT_TBL_PATH}:0:7500M"
+# MBR header length. For MBR, this is always 512.
+IMAGE_PT_TBL_LENGTH=512
+# MBR partition information. When the MBR need to be regenerated, this struct will be used to generate a new MBR.
+# Format: [PARTITION_NAME:<OFFSET_START>:<OFFSET_END>:<Filesystem Type>]
+# Numbers and fs type in this struct will be passed to command directly.
+# sudo parted <PARTITION_NAME> unit MiB mkpart primary <Filesystem Type> <OFFSET_START> <OFFSET_END>
+IMAGE_PT_TABLE_STRUCT="
+1:SLOTA_BOOT_PT:100:220:fat32
+2:SLOTA_ROOTFS:220:3220:ext4
+3:SLOTB_BOOT_PT:3220:3340:fat32
+4:SLOTB_ROOTFS:3340:6340:ext4
 "
 
+# Header of a image.
+# Contains MBR, bootloader and padding.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 IMAGES_HEADER="
-${IMAGE_MBR_PATH}:0:33K
+${IMAGE_PT_TBL_PATH}:0:33K
 ${WRK_DIR}/slota/imx-boot-imx8mmevk-sd.bin-flash_evk:33K:8M
 "
 
+# SWUpdate image.
+# Contains zImage, dtb and ramfs for SWUpdate.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 IMAGES_SWUPDATE="
 ${WRK_DIR}/slota/Image:8M:38M
 ${WRK_DIR}/slota/imx8mm-evk.dtb:38M:42M
@@ -31,6 +49,9 @@ SLOTA_BOOT_PT_FILES="
 ${WRK_DIR}/slota/imx8mm-evk.dtb
 ${WRK_DIR}/slota/Image
 "
+# SLOTA images
+# Contains boot partition and rootfs.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 SLOTA_BOOT_PT="${WRK_DIR}/common/slota_boot_pt_120M.mirror:100M:220M"
 SLOTA_ROOTFS="${WRK_DIR}/slota/imx-image-multimedia-imx8mmevk.ext4:220M:3220M"
 SLOTA_IMAGES="
@@ -43,6 +64,9 @@ SLOTB_BOOT_PT_FILES="
 ${WRK_DIR}/slotb/imx8mm-evk.dtb
 ${WRK_DIR}/slotb/Image
 "
+# SLOTB images
+# Contains boot partition and rootfs.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
 SLOTB_BOOT_PT="${WRK_DIR}/common/slotb_boot_pt_120M.mirror:3220M:3340M"
 SLOTB_ROOTFS="${WRK_DIR}/slotb/imx-image-multimedia-imx8mmevk.ext4:3340M:6340M"
 SLOTB_IMAGES="
