--- a/boards/cfg_imx6ullwch_update_image.cfg
+++ b/boards/cfg_imx6ullwch_update_image.cfg
@@ -16,7 +16,7 @@ UPDATE_CONTAINER_VER="1.0"
 SSL_MODE=RSA-PKCS-1.5
 
 # Those images will be copied from slot_update to work directory and generate the update image.
-# Format: [<FILE>:<FILE_SIZE>]
+# Format: [<FILE>:<PARTITION_SIZE>]
 UPDATE_IMAGES="
 ddr_cfg_samsung_iot_hub.imx.mbpB:1M
 lk.imxB:10M
