Update the rule to generate update images.
Now user should use swu_generate_part_img.sh to generate an image for a partition.
The swu_update_image_build.sh will only used to concat partition images into
a whole image.
Old scripts are moved to legacy directory.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx93_update_image.cfg
+++ b/boards/cfg_imx93_update_image.cfg
@@ -16,22 +16,13 @@ UPDATE_CONTAINER_VER="1.0"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 
-# Updated image information.
-# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
-UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
-UPDATE_ROOTFS="${WRK_DIR}/core-image-base-imx93evk.ext4:0:3000M"
-
-# Boot partition files. These files will be copied to boot partition.
-UPDATE_BOOT_PT_FILES="
-${WRK_DIR}/slot_update/imx93-11x11-evk.dtb
-${WRK_DIR}/slot_update/Image
-"
-
 # Those images will be copied from slot_update to work directory and generate the update image.
+# Format: [<image_name>:<truncate_size>]
+# If truncate is not required, use ":" with no size.
 UPDATE_IMAGES="
 slotb_boot_pt_120M.mirror:120M
 core-image-base-imx93evk.ext4:3000M
-imx-boot-imx93evk-sd.bin-flash_singleboot:2M
+imx-boot-imx93evk-sd.bin-flash_singleboot:
 "
 
 UPDATE_SCRIPTS="
