--- a/legacy/boards/cfg_imx6ull_update_image.cfg
+++ b/legacy/boards/cfg_imx6ull_update_image.cfg
@@ -16,14 +16,22 @@ UPDATE_CONTAINER_VER="1.0"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 
-# Those images will be copied from slot_update to work directory and generate the update image.
-UPDATE_IMAGES="
-slotb_boot_pt_120M.mirror:120M
-core-image-base-imx6ull14x14evk.ext4:3000M
-u-boot-imx6ull14x14evk.imx:
+# Updated image information.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
+UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
+UPDATE_ROOTFS="${WRK_DIR}/core-image-base-imx6ull14x14evk.ext4:0:3000M"
+
+# Boot partition files. These files will be copied to boot partition.
+UPDATE_BOOT_PT_FILES="
+${WRK_DIR}/slot_update/imx6ull-14x14-evk.dtb
+${WRK_DIR}/slot_update/zImage
 "
 
-UPDATE_SCRIPTS="
+# Those images will be copied from slot_update to work directory and generate the update image.
+UPDATE_IMAGES="
+slotb_boot_pt_120M.mirror
+core-image-base-imx6ull14x14evk.ext4
+u-boot-imx6ull14x14evk.imx
 "
 
 # Template file that will be used to generate a sw-description file.
