--- a/legacy/boards/cfg_imx6ullwch_update_image.cfg
+++ b/legacy/boards/cfg_imx6ullwch_update_image.cfg
@@ -2,14 +2,13 @@
 
 # Name of the SoC.
 # This name will be used to source this board specific cfg file.
-SOC_NAME=imx6ull
+SOC_NAME=imx6ullwch
 
 #############################################
 # Used to generate update image.
 #############################################
 # Updated BSP version. This string will be added to default output file.
-UPDATE_BSP_VER="LF_v5.10.9_1.0.0"
-
+UPDATE_BSP_VER="LF_v5.15.32_2.0.0"
 # Updated container version. This string will be added to default output file.
 UPDATE_CONTAINER_VER="1.0"
 
@@ -17,15 +16,19 @@ UPDATE_CONTAINER_VER="1.0"
 SSL_MODE=RSA-PKCS-1.5
 
 # Those images will be copied from slot_update to work directory and generate the update image.
+# Format: [<FILE>:<PARTITION_SIZE>]
 UPDATE_IMAGES="
-slotb_boot_pt_120M.mirror:120M
-core-image-base-imx6ull14x14evk.ext4:3000M
-u-boot-imx6ull14x14evk.imx:
+ddr_cfg_samsung_iot_hub.imx.mbpB:1M
+lk.imxB:10M
+zImageB:20M
+imx6ull-14x14-evk-emmc.dtb.mbpB:1M
+rootfs.ext4B:2G
 "
 
 UPDATE_SCRIPTS="
+env_set_bootslot.sh
 "
 
 # Template file that will be used to generate a sw-description file.
-SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy-image.template"
+SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ullwch-emmc-dualcopy-image.template"
 
