--- a/legacy/boards/cfg_imx8mm_update_image.cfg
+++ b/legacy/boards/cfg_imx8mm_update_image.cfg
@@ -10,14 +10,17 @@ UPDATE_CONTAINER_VER="1.0"
 UPDATE_SLOT="b"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
-
-UPDATE_IMAGES="
-slotb_boot_pt_120M.mirror:120M
-imx-image-multimedia-imx8mmevk.ext4:3000M
-imx-boot-imx8mmevk-sd.bin-flash_evk:
+UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
+UPDATE_ROOTFS="${WRK_DIR}/imx-image-multimedia-imx8mmevk.ext4:0:3000M"
+UPDATE_BOOT_PT_FILES="
+${WRK_DIR}/imx8mm-evk.dtb
+${WRK_DIR}/Image
 "
 
-UPDATE_SCRIPTS="
+UPDATE_IMAGES="
+slotb_boot_pt_120M.mirror
+imx-image-multimedia-imx8mmevk.ext4
+imx-boot-imx8mmevk-sd.bin-flash_evk
 emmc_bootpart.sh
 "
 
