--- a/legacy/boards/cfg_imx93_update_image.cfg
+++ b/legacy/boards/cfg_imx93_update_image.cfg
@@ -2,13 +2,13 @@
 
 # Name of the SoC.
 # This name will be used to source this board specific cfg file.
-SOC_NAME=imx6ull
+SOC_NAME=imx93
 
 #############################################
 # Used to generate update image.
 #############################################
 # Updated BSP version. This string will be added to default output file.
-UPDATE_BSP_VER="LF_v5.10.9_1.0.0"
+UPDATE_BSP_VER="LF_v5.15.71_2.2.0"
 
 # Updated container version. This string will be added to default output file.
 UPDATE_CONTAINER_VER="1.0"
@@ -16,16 +16,27 @@ UPDATE_CONTAINER_VER="1.0"
 # Supported SSL modes are RSA-PKCS-1.5, RSA-PSS and DGST.
 SSL_MODE=RSA-PKCS-1.5
 
+# Updated image information.
+# Format: [FILEPATH:<OFFSET_START>:<OFFSET_END>]
+UPDATE_BOOT_PT="${WRK_DIR}/slotb_boot_pt_120M.mirror:0:120M"
+UPDATE_ROOTFS="${WRK_DIR}/core-image-base-imx93evk.ext4:0:3000M"
+
+# Boot partition files. These files will be copied to boot partition.
+UPDATE_BOOT_PT_FILES="
+${WRK_DIR}/slot_update/imx93-11x11-evk.dtb
+${WRK_DIR}/slot_update/Image
+"
+
 # Those images will be copied from slot_update to work directory and generate the update image.
 UPDATE_IMAGES="
 slotb_boot_pt_120M.mirror:120M
-core-image-base-imx6ull14x14evk.ext4:3000M
-u-boot-imx6ull14x14evk.imx:
+core-image-base-imx93evk.ext4:3000M
 "
 
 UPDATE_SCRIPTS="
+emmc_bootpart.sh
 "
 
 # Template file that will be used to generate a sw-description file.
-SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx6ull-sd-singlecopy-image.template"
+SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx93-emmc-dualcopy-image.template"
 
