--- a/boards/cfg_imx8mm_base.cfg
+++ b/boards/cfg_imx8mm_base.cfg
@@ -20,7 +20,7 @@ IMAGE_PT_TBL_LENGTH=512
 # Format: [PARTITION_NAME:<OFFSET_START>:<OFFSET_END>:<Filesystem Type>]
 # Numbers and fs type in this struct will be passed to command directly.
 # sudo parted <PARTITION_NAME> unit MiB mkpart primary <Filesystem Type> <OFFSET_START> <OFFSET_END>
-IMAGE_PT_TABLE_STRUCT="
+IMAGE_PT_TBL_STRUCT="
 1:SLOTA_BOOT_PT:100:220:fat32
 2:SLOTA_ROOTFS:220:3220:ext4
 3:SLOTB_BOOT_PT:3220:3340:fat32
