Apply imx93a1 chip swupdate cfg file.
In this change, we upgrade kernel to 6.1.36 for imx93a1 chip.
And, to use yocto built out images directly, we change sw-description
file to use both files and images.

Signed-off-by: Terry Lv <Terry.Lv@nxp.com>

--- a/boards/cfg_imx93_update_image.cfg
+++ b/boards/cfg_imx93_update_image.cfg
@@ -8,7 +8,7 @@ SOC_NAME=imx93
 # Used to generate update image.
 #############################################
 # Updated BSP version. This string will be added to default output file.
-UPDATE_BSP_VER="LF_v5.15.71_2.2.0"
+UPDATE_BSP_VER="LF_v6.1.36_2.1.0"
 
 # Updated container version. This string will be added to default output file.
 UPDATE_CONTAINER_VER="1.0"
@@ -20,15 +20,15 @@ SSL_MODE=RSA-PKCS-1.5
 # Format: [<image_name>:<truncate_size>]
 # If truncate is not required, use ":" with no size.
 UPDATE_IMAGES="
-slotb_boot_pt_120M.mirror:120M
+Image:
+imx93-11x11-evk.dtb:
 core-image-base-imx93evk.ext4:3000M
 imx-boot-imx93evk-sd.bin-flash_singleboot:
 "
 
 UPDATE_SCRIPTS="
-emmc_bootpart.sh
 "
 
 # Template file that will be used to generate a sw-description file.
-SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx93-emmc-dualcopy-image.template"
+SW_DESCRIPTION_TEMPLATE="${WRK_DIR}/../boards/sw-description-imx93-sd-dualcopy-image.template"
 
